added detailed README with links to test methods URLs, wrote `add_w` function along with its documentation and a check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,30 @@
 Package: diRtscience
-Title: What the Package Does (One Line, Title Case)
+Title: Functions for analyzing baseball/softball infield mixes and other sports turf soils
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Evan",
+           family = "Mascitti",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+           email = "evanmascitti@gmail.com",
+           comment = c(ORCID = "0000-0002-0143-6100"))
+Description: This package is for analyzing laboratory tests of soil mixtures. The code was written as part of Evan Mascitti's PhD project. It may be useful to others performing soil physical analyses.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat
+Imports: 
+    dplyr,
+    magrittr,
+    tibble,
+    purrr,
+    broom,
+    readr,
+    Morpho,
+    Rvcg,
+    circular,
+    measurements, 
+    mosaic, 
+    splines
