--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,11 @@ Imports:
     Morpho,
     Rvcg,
     circular,
-    measurements, 
-    mosaic, 
-    splines
+    measurements,
+    mosaic,
+    splines,
+    stats,
+    rlang,
+    utils
 Depends: 
     R (>= 2.10)
