--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,8 @@ Imports:
     splines,
     stats,
     rlang,
-    utils
+    utils,
+    lifecycle
 Depends: 
     R (>= 2.10)
+RdMacros: lifecycle
