fixed syntax issue in equation for  `add_w`; had to use the empty ASCII argument in the ` dmjeqn{} macro call. This `mathjax` package is great once I figured out the syntax.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,11 @@ Imports:
     stats,
     rlang,
     utils,
-    lifecycle
+    lifecycle,
+    mathjaxr
 Depends: 
     R (>= 2.10)
-RdMacros: lifecycle
+RdMacros: 
+    lifecycle,
+    mathjaxr
+            
