fixed many many errors in documentation, changed dots in function arguments to underscores, moved example to a separate file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,10 +32,10 @@ Imports:
     rlang,
     utils,
     lifecycle,
-    mathjaxr
+    mathjaxr,
+    lubridate
 Depends: 
     R (>= 2.10)
 RdMacros: 
     lifecycle,
     mathjaxr
-            
