Added new function (compaction_aliquots) for calculating water additions to Proctor specimens. Renamed sandClay function to mix_calcs. Updated README. Tweaked formatting in documentation for proctor_fit.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(add_w)
-export(calculate_mix_wts)
+export(compaction_aliquots)
+export(mix_calcs)
 export(proctor_fit)
 importFrom(magrittr,"%>%")
