adjusted example water content to have more realistic values

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Imports:
     utils,
     lifecycle,
     mathjaxr,
-    lubridate
+    lubridate,
+    tidyr
 Depends: 
     R (>= 2.10)
 RdMacros: 
