added two functions (d_max and w_opt) which allow faster ways to pull out the variables of interest from proctor_fit, which returns a lot of extra stuff for completeness. Updated some lingo in proctor_fit documentation. Added the new functions to README and changed formatting of code blocks in README.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export("%>%")
 export(add_w)
 export(compaction_aliquots)
+export(d_max)
 export(mix_calcs)
 export(proctor_fit)
+export(w_opt)
 importFrom(magrittr,"%>%")
