ported some Atterberg limit-related functions over from previous code.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,9 @@ Imports:
     lifecycle,
     mathjaxr,
     lubridate,
-    tidyr
+    tidyr,
+    ggplot2,
+    cowplot
 Depends: 
     R (>= 2.10)
 RdMacros: 
