--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,18 @@
 
 export("%>%")
 export(add_w)
+export(casagrande_chart)
 export(compaction_aliquots)
+export(compute_LL)
 export(d_max)
+export(flow_curve_model)
 export(mix_calcs)
 export(proctor_fit)
+export(scissor_trim_mesh)
 export(w_opt)
+import(ggplot2)
+importFrom(Morpho,cutMeshPlane)
+importFrom(dplyr,filter)
+importFrom(dplyr,select)
 importFrom(magrittr,"%>%")
+importFrom(purrr,map)
