Added proctor plotting function. Still need to figure out the minor breaks display. Fudged with geom_vline but decided to use minor cowplot grid instead. Works great for one sample but need to generalize for mapping aes() to sample number for plotting multiple curves on one plot.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: diRtscience
 Title: Functions for analyzing baseball/softball infield mixes and other sports turf soils
-Version: 0.0.0.9001
+Version: 0.0.1
 Authors@R: 
     person(given = "Evan",
            family = "Mascitti",
@@ -36,7 +36,10 @@ Imports:
     lubridate,
     tidyr,
     ggplot2,
-    cowplot
+    cowplot,
+    ggalt,
+    Hmisc,
+    scales
 Depends: 
     R (>= 2.10)
 RdMacros: 
