--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(compaction_aliquots)
 export(compute_LL)
 export(d_max)
 export(flow_curve_model)
+export(ggproctor)
 export(mix_calcs)
 export(proctor_fit)
 export(scissor_trim_mesh)
