cleaned up liquid limit functions and added a plotting function for the flow curve

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,8 @@ export(casagrande_chart)
 export(compaction_aliquots)
 export(compute_LL)
 export(d_max)
-export(flow_curve_model)
 export(generate_proctor_datasheet)
+export(ggflowcurve)
 export(ggproctor)
 export(mix_calcs)
 export(proctor_fit)
