--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export("%>%")
 export(add_physical_properties)
 export(add_w)
 export(casagrande_chart)
-export(compaction_aliquots)
 export(compute_LL)
 export(d_max)
 export(generate_proctor_datasheet)
@@ -12,7 +11,7 @@ export(ggflowcurve)
 export(ggproctor)
 export(mix_calcs)
 export(proctor_fit)
-export(proctor_plot)
+export(proctor_prep)
 export(w_opt)
 import(ggplot2)
 importFrom(magrittr,"%>%")
