--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(add_physical_properties)
 export(add_w)
 export(casagrande_chart)
 export(compute_LL)
+export(compute_spraytime)
 export(d_max)
 export(generate_proctor_datasheet)
 export(ggflowcurve)
