added new functions to generate empty datasheets for Atterberg limit tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(generate_proctor_datasheet)
 export(ggflowcurve)
 export(ggproctor)
 export(mix_calcs)
+export(new_LL_datasheet)
+export(new_PL_datasheet)
 export(proctor_fit)
 export(proctor_prep)
 export(w_opt)
