--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ggproctor)
 export(mix_calcs)
 export(new_LL_datasheet)
 export(new_PL_datasheet)
+export(new_pipette_datasheets)
 export(proctor_fit)
 export(proctor_prep)
 export(w_opt)
