added function to calculate settling distance for pipette analysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(mix_calcs)
 export(new_LL_datasheet)
 export(new_PL_datasheet)
 export(new_pipette_datasheets)
+export(pipette_sample_depth)
 export(proctor_fit)
 export(proctor_prep)
 export(w_opt)
