Combined the Atterberg limit data sheets functions into one. Tweaked pipette data sheet functions. Added error messages for both if the files already exist.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(add_physical_properties)
 export(add_w)
+export(att_lims_datasheets)
 export(casagrande_chart)
 export(compute_LL)
 export(compute_spraytime)
@@ -11,9 +12,7 @@ export(generate_proctor_datasheet)
 export(ggflowcurve)
 export(ggproctor)
 export(mix_calcs)
-export(new_LL_datasheet)
-export(new_PL_datasheet)
-export(new_pipette_datasheets)
+export(pipette_datasheets)
 export(pipette_sample_depth)
 export(proctor_fit)
 export(proctor_prep)
