wrote functions to analyze pipette/sieve data and plot the results for a single sample or for many.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,10 @@ export(d_max)
 export(generate_proctor_datasheet)
 export(ggflowcurve)
 export(ggproctor)
+export(ggpsd)
+export(ggpsd_single_sample)
 export(mix_calcs)
+export(pipette_analysis)
 export(pipette_datasheets)
 export(pipette_sample_depth)
 export(proctor_fit)
