--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,6 @@ Imports:
     tibble,
     purrr,
     readr,
-    Morpho,
-    Rvcg,
     mosaic,
     splines,
     stats,
@@ -37,7 +35,9 @@ Imports:
     modelr,
     mathjaxr,
     crayon,
-    stringr
+    stringr,
+    asi468,
+    latex2exp
 Depends: 
     R (>= 2.10)
 RdMacros: 
