added function for plotting phase diagrams

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(compute_spraytime)
 export(d_max)
 export(generate_proctor_datasheet)
 export(ggflowcurve)
+export(ggphase_diagram)
 export(ggproctor)
 export(ggpsd)
 export(ggpsd_single_sample)
