--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: soiltestr
 Title: Functions for Laboratory Soil Testing
-Version: 0.0.2.9009
+Version: 0.0.2.9010
 Authors@R: 
     person(given = "Evan",
            family = "Mascitti",
@@ -38,7 +38,9 @@ Imports:
     stringr,
     asi468,
     latex2exp,
-    forcats
+    forcats,
+    patchwork,
+    glue
 Depends: 
     R (>= 2.10)
 RdMacros: 
