added function for analyzing pipette batches for only sand, silt and clay (i.e. no silt breakdown, centrifuge, or sieving)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(ggpsd)
 export(ggpsd_single_sample)
 export(mix_calcs)
 export(pipette_analysis)
+export(pipette_analysis_minimial)
 export(pipette_datasheets)
 export(pipette_sample_depth)
 export(proctor_fit)
