--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(add_physical_properties)
 export(add_w)
 export(att_lims_datasheets)
 export(casagrande_chart)
+export(centrifuge_time)
 export(compute_LL)
 export(compute_spraytime)
 export(d_max)
@@ -24,6 +25,8 @@ export(pipette_datasheets)
 export(pipette_sample_depth)
 export(proctor_fit)
 export(proctor_prep)
+export(psa)
+export(psa.analyze.pipette.OMremoved)
 export(w_opt)
 import(ggplot2)
 importFrom(magrittr,"%>%")
