--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: soiltestr
 Title: Functions for Laboratory Soil Testing
-Version: 0.0.2.9010
+Version: 0.0.3.0
 Authors@R: 
     person(given = "Evan",
            family = "Mascitti",
@@ -40,7 +40,8 @@ Imports:
     latex2exp,
     forcats,
     patchwork,
-    glue
+    glue,
+    janitor
 Depends: 
     R (>= 2.10)
 RdMacros: 
