almost done revamping psa datasheet generation function...about to delete the separate scripts I wrote to produce internal data for these functions. All of it is now in one script, because there can only be a single .rda file which operates when the package is loaded.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,15 +14,15 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
-    testthat
+    testthat,
+    mosaic,
+    splines
 Imports: 
     dplyr,
     magrittr,
     tibble,
     purrr,
     readr,
-    mosaic,
-    splines,
     stats,
     rlang,
     utils,
