--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(att_lims_datasheets)
 export(casagrande_chart)
 export(centrifuge_time)
 export(compute_LL)
+export(compute_sieves_percent_passing)
 export(compute_spraytime)
 export(d_max)
 export(generate_proctor_datasheet)
@@ -27,6 +28,7 @@ export(proctor_fit)
 export(proctor_prep)
 export(psa)
 export(psa.analyze.pipette.OMremoved)
+export(psa_datasheets)
 export(w_opt)
 import(ggplot2)
 importFrom(magrittr,"%>%")
