--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -6,3 +6,26 @@ data-raw
 inst/extdata
 
 
+^data-raw$
+^ignore-this//psa-functions-development/conceptual-ideas\.html$
+^ignore-this//psa-functions-development/conceptual-ideas\.Rmd$
+^ignore-this//psa-functions-development/full-pipette-run-no-OM-removal/pipette_w_sieves_data_2021-03-06/blank_correction_data_2021-03-06\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-no-OM-removal/pipette_w_sieves_data_2021-03-06/hygroscopic_correction_data_2021-03-06\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-no-OM-removal/pipette_w_sieves_data_2021-03-06/metadata_2021-03-06\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-no-OM-removal/pipette_w_sieves_data_2021-03-06/pipetting_data_2021-03-06\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-no-OM-removal/pipette_w_sieves_data_2021-03-06/sieving_data_2021-03-06\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-no-OM-removal/pipette_w_sieves_data_2021-03-06/specimen_masses_data_2021-03-06\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-w-OM-removal/pipette_w_sieves_data_2021-03-04/blank_correction_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-w-OM-removal/pipette_w_sieves_data_2021-03-04/hygroscopic_correction_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-w-OM-removal/pipette_w_sieves_data_2021-03-04/metadata_2021-03-04\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-w-OM-removal/pipette_w_sieves_data_2021-03-04/pipetting_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-w-OM-removal/pipette_w_sieves_data_2021-03-04/pretreatment_loss_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-w-OM-removal/pipette_w_sieves_data_2021-03-04/sieving_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/full-pipette-run-w-OM-removal/pipette_w_sieves_data_2021-03-04/specimen_masses_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/OM-removal-corrected/pipette_w_sieves_data_2021-03-04/blank_correction_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/OM-removal-corrected/pipette_w_sieves_data_2021-03-04/hygroscopic_correction_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/OM-removal-corrected/pipette_w_sieves_data_2021-03-04/metadata_2021-03-04\.csv$
+^ignore-this//psa-functions-development/OM-removal-corrected/pipette_w_sieves_data_2021-03-04/OM_loss_correction_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/OM-removal-corrected/pipette_w_sieves_data_2021-03-04/pipetting_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/OM-removal-corrected/pipette_w_sieves_data_2021-03-04/sieving_data_2021-03-04\.csv$
+^ignore-this//psa-functions-development/OM-removal-corrected/pipette_w_sieves_data_2021-03-04/specimen_masses_data_2021-03-04\.csv$
