changed all instances of 'sample_ID' to 'sample_name' for consistency, and to help enforce the convention that this should be treated as a character or factor type and not a numeric type

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(att_lims_datasheets)
 export(casagrande_chart)
 export(centrifuge_time)
 export(compute_LL)
+export(compute_sieves_percent_passing)
 export(compute_spraytime)
 export(d_max)
 export(generate_proctor_datasheet)
@@ -23,6 +24,7 @@ export(pipette_analysis)
 export(pipette_analysis_minimial)
 export(pipette_datasheets)
 export(pipette_sample_depth)
+export(pipette_sampling_datasheets)
 export(proctor_fit)
 export(proctor_prep)
 export(psa)
