got the psa datasheets really streamlined for pipette-style analyses. Now need to make a function to work for hydrometer tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(pipette_analysis_minimial)
 export(pipette_datasheets)
 export(pipette_sample_depth)
 export(pipette_sampling_datasheets)
+export(pipetting_datasheets)
+export(pretreatment_datasheet)
 export(proctor_fit)
 export(proctor_prep)
 export(psa)
@@ -33,4 +35,5 @@ export(psa_datasheets)
 export(w_opt)
 import(ggplot2)
 importFrom(magrittr,"%>%")
+importFrom(rlang,"%||%")
 importFrom(rlang,.data)
