--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,17 +16,16 @@ RoxygenNote: 7.1.1
 Suggests: 
     testthat,
     mosaic,
-    splines
+    splines,
+    lifecycle,
+    stats
 Imports: 
     dplyr,
     magrittr,
     tibble,
     purrr,
     readr,
-    stats,
     rlang,
-    utils,
-    lifecycle,
     lubridate,
     tidyr,
     ggplot2,
@@ -37,11 +36,9 @@ Imports:
     crayon,
     stringr,
     asi468,
-    latex2exp,
     forcats,
     patchwork,
-    glue,
-    janitor
+    glue
 Depends: 
     R (>= 2.10)
 RdMacros: 
