added a way to do wash-through psa, i.e. sand + gravel and total fines

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(centrifuge_time)
 export(compute_LL)
 export(compute_sieves_percent_passing)
 export(compute_spraytime)
+export(compute_tth)
 export(d_max)
 export(generate_proctor_datasheet)
 export(ggflowcurve)
@@ -26,6 +27,7 @@ export(proctor_fit)
 export(proctor_prep)
 export(psa)
 export(psa_datasheets)
+export(scr_mix_calcs)
 export(w_opt)
 import(ggplot2)
 importFrom(magrittr,"%>%")
