--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(ggphase_diagram)
 export(ggproctor)
 export(ggpsd)
 export(ggpsd_single_sample)
+export(hygroscopic_w)
 export(mix_calcs)
 export(pipette_sample_depth)
 export(pipetting_datasheets)
