--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,6 @@ export(compute_sieves_percent_passing)
 export(compute_spraytime)
 export(compute_tth)
 export(d_max)
-export(generate_proctor_datasheet)
 export(ggflowcurve)
 export(ggphase_diagram)
 export(ggproctor)
@@ -24,11 +23,13 @@ export(hygroscopic_w)
 export(mix_calcs)
 export(pipette_sample_depth)
 export(pipetting_datasheets)
+export(proctor_datasheet)
 export(proctor_fit)
 export(proctor_prep)
 export(psa)
 export(psa_datasheets)
 export(scr_mix_calcs)
+export(w_addition)
 export(w_opt)
 import(ggplot2)
 importFrom(magrittr,"%>%")
