got new/refatored mix calc fns to work. Commiting this way with all the browser calls still in there. Don't use the sum function if you plan on using any other vectorized functions in the function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(proctor_fit)
 export(proctor_prep)
 export(psa)
 export(psa_datasheets)
+export(sand_w_scr_mix_calcs)
 export(scr_mix_calcs)
 export(w_addition)
 export(w_opt)
