major refactoring of proctor_prep()...still needs more work but it can now directly accept the return value of sand_w_scr_mix_calcs() and use it (along with another argument) to prepare the aliquots sheet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(compute_sieves_percent_passing)
 export(compute_spraytime)
 export(compute_tth)
 export(d_max)
+export(format_proctor_datasheet)
 export(ggflowcurve)
 export(ggphase_diagram)
 export(ggproctor)
