added tests for sand_clay_mix_calcs()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(compute_sieves_percent_passing)
 export(compute_spraytime)
 export(compute_tth)
 export(d_max)
+export(format_mix_calcs)
 export(format_proctor_datasheet)
 export(ggflowcurve)
 export(ggphase_diagram)
@@ -21,7 +22,6 @@ export(ggproctor)
 export(ggpsd)
 export(ggpsd_single_sample)
 export(hygroscopic_w)
-export(mix_calcs)
 export(pipette_sample_depth)
 export(pipetting_datasheets)
 export(proctor_datasheet)
@@ -29,6 +29,7 @@ export(proctor_fit)
 export(proctor_prep)
 export(psa)
 export(psa_datasheets)
+export(sand_clay_mix_calcs)
 export(sand_w_scr_mix_calcs)
 export(scr_mix_calcs)
 export(w_addition)
