added hydrometer scheduling function....experimental because I want to pare down the number of readings to take, but it is hard to compute the needed times based on the equations in D7928. Will run these samples, do the calculations, and then choose the appropriate sampling interval

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(ggphase_diagram)
 export(ggproctor)
 export(ggpsd)
 export(ggpsd_single_sample)
+export(hydrometer_schedule)
 export(hygroscopic_w)
 export(pipette_sample_depth)
 export(pipetting_datasheets)
