renamed sssa pipette bins to reflect that they are actually Canadian

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(ggpsd_single_sample)
 export(hydrometer_schedule)
 export(hygroscopic_w)
 export(pipette_sample_depth)
+export(pipette_schedule)
 export(pipetting_datasheets)
 export(proctor_datasheet)
 export(proctor_fit)
