added fns to easily collect and analyze water content data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(compute_sieves_percent_passing)
 export(compute_spraytime)
 export(compute_tth)
 export(d_max)
+export(extant_w)
 export(format_mix_calcs)
 export(format_proctor_datasheet)
 export(ggflowcurve)
@@ -38,6 +39,7 @@ export(sand_w_scr_mix_calcs)
 export(scr_mix_calcs)
 export(w_addition)
 export(w_opt)
+export(water_content_datasheet)
 import(ggplot2)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"%||%")
