--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(psa_datasheets)
 export(sand_clay_mix_calcs)
 export(sand_w_scr_mix_calcs)
 export(scr_mix_calcs)
+export(tidy_mastersizer)
 export(w_addition)
 export(w_opt)
 export(water_content_datasheet)
