made some misc updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(att_lims_datasheets)
 export(casagrande_chart)
 export(centrifuge_time)
 export(compute_LL)
+export(compute_flow_index)
 export(compute_spraytime)
 export(compute_tth)
 export(d_max)
